1998-03-09  Stefan Taferner  <taferner@kde.org>

	* Reader: '_' was not considered part of a smart-detected email
	address (auto detection of @).

	* Reader: attachments of type message/rfc822 are now shown
	in an external reader window if open or view from the attachment
	popup menu is chosen.

	* Composer: finally got insertion of tabs into message
	working.

(some changes are missing here)
	
1998-02-14  Stefan Taferner  <taferner@kde.org>

	* Startup: when recovering dead letters the auto signature was 
	appended twice. Fixed now.

	* Composer: fixed broken inserting of files.

	* kFileToString(): fixed handling of files with zero length.

Initial version: 0.5.7